# Logger

./: .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci-go.yml  ci-python.yml  ci-require-labels.yml  go.yml  integration-test.yml  python.yml  release.yml
cmd/: main.go
pkg/logger/: chunking.go  chunking_test.go  configure.go  configure_test.go  context.go  context_test.go  fields.go  fields_test.go  globals.go  http.go  logger.go  logger_test.go  nullify_context.go  options.go  statements.go
pkg/logger/meter/: meter.go  meter_test.go
pkg/logger/middleware/: logger.go  metrics.go  trace.go  tracer.go
pkg/logger/propagation/: sns.go  sqs.go
pkg/logger/tracer/: custom.go  custom_test.go  headers.go  lambda.go  sns.go  sqs.go  sqs_test.go  tracer.go
pylogtracer/: .env  README.md  requirements.txt  setup.py
pylogtracer/examples/: langfuse-trace-id-example.py  main.py
pylogtracer/pylogtracer/: __init__.py  config.py  formatter.py  logger.py  tracer.py  tracing_setup.py
pylogtracer/pylogtracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pylogtracer/tests/: test_config.py  test_formatter.py
tests/: add_field_test.go  development_test.go  production_test.go  with_options_test.go
