[project]
name            = "pylogtracer"
version         = "0.2.0"
description     = "Internal logging library with structured JSON logging and optional tracing"
readme          = "pylogtracer/README.md"
requires-python = ">=3.11"
dependencies    = []  # Core modules (formatter, config) are stdlib-only

[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
]
loguru = ["loguru>=0.7.0"]
all = ["pylogtracer[tracing,loguru]"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pylogtracer"]
